# Trabalho-final-de-Engenharia-de-Sistemas-Inteligente

./: Cópia_de_Treinamento_ESI.ipynb  README.md  Trabalho ESI.postman_collection.json  Treinamento_ESI.ipynb  app.py  imoveis_tratados.csv  projeto_final_ESI.ipynb  pyproject.toml  requeriments.txt  requirements.txt
artifacts/: modelo_campeao.pkl
dados/: historico_apartamentos.csv
src/: pipeline_dados.py  pipeline_modelos.py
