[project]
name = "trabalho-final-de-engenharia-de-sistemas-inteligente"
version = "0.1.0"
description = ""
authors = [
    {name = "OTiaggo",email = "toliveir123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
